# BakLogMD

./: .gitignore  README.md  index.html  package-lock.json  package.json
apps/api/: .env.example  README.md  package.json
apps/api/src/: index.ts
apps/desktop/: README.md  package.json
apps/desktop/src/: api.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: backlog.rs  keychain.rs  main.rs  markdown.rs
apps/web/: README.md  index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  markdown.ts  styles.css
docs/: release.md
scripts/: dev-web-api.mjs
src/: App.tsx  types.ts
src-tauri/: tauri.conf.json
src-tauri/src/: app_error.rs  commands.rs  db.rs  models.rs
