[package]
name = "backlog-markdown-exporter"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
directories = "5"
log = "0.4"
urlencoding = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
